# gcb-ai-agent

./: .gitignore  PAYLOAD_CHANGES.md  README.md  build-and-push.sh  deploy-full.sh  docker-compose.yml
.github/: CODEOWNERS
docs/: DEPLOY.md  INFRASTRUCTURE.md
infra/environments/dev/: env_dev_tfvars  main.tf  variables.tf
infra/environments/prod/: main.tf  variables.tf
infra/modules/ecr/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  variables.tf
infra/modules/sns/: main.tf  outputs.tf  variables.tf
infra/modules/sqs/: main.tf  outputs.tf  variables.tf
lambdas/: Dockerfile  entry.sh
lambdas/src/: .dockerignore  .env.example  README.md  cutout_extractor.py  main.py  pdf_parser.py  pyproject.toml  report_generator.py  s3_provider.py  sns_provider.py
lambdas/src/agents/: __init__.py  contract_information_agent.py  installment_series_agent.py
